# RustyVault

./: .gitignore  Cargo.toml  LICENSE.txt  PRD.md  README.md  ROADMAP.md  SETTINGS_REHAB.md  THEMES.md  build.rs  build_release.ps1  release.ps1  test_parser.rs
.cursor/rules/: apprules.mdc  persona.mdc
src/: app.rs  main.rs
src/core/: backup.rs  config.rs  daemon.rs  mod.rs  path_validation.rs
src/logging/: mod.rs
src/system/: mod.rs  notifications.rs  process.rs  registry.rs  startup.rs  tray.rs  window.rs
src/ui/: components.rs  icons.rs  main_window.rs  mod.rs  settings_window.rs  tooltips.rs
